--- a/API_Pasteles/VistaLoginRegistro.html
+++ b/API_Pasteles/VistaLoginRegistro.html
@@ -1,5 +1,6 @@
 <head>
-    <title>Pastelería</title>
+    <meta charset="utf-8">
+    <title>Crear una cuenta</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 </head>
@@ -46,10 +47,12 @@
 						<input class="form-control" placeholder="Clave" name="clave" type="password" autofocus required>
 					</div>
 					<div class="col">
-						<input type="checkbox" class="form-check-input fs-6 fw-bold" id="checkCondiciones" required>
-						<label class="form-check-label fw-bold text-white fs-6 user-select-none" for="checkCondiciones">Acepto términos y condiciones.</label>
+						<br>
 					</div>
 				</div>
+					<input type="checkbox" class="form-check-input fs-6 fw-bold" id="checkCondiciones" required>
+					<label class="form-check-label fw-bold text-white fs-6 user-select-none" for="checkCondiciones">Acepto términos y condiciones.</label>
+					
 							<div class="row align-items-center">
 						<button type="submit" class="btn btn-primary btn-lg fs-4 fw-bold text-white col">Crear una cuenta</button>
 					</div>
